
2018-06-24  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fixed 'output_size' to adjust size by starting offset
	* typeck.c: If destination of a MOVE is variable_size and
	   there is no reference mod (or start position is 1) then
	   emit code to MOVE fixed size header of field first as it
	   may be holding the DEPENDING ON fields/values then do
	   a complete MOVE.

2018-06-20  Ron Norman <rjn@inglenet.com>
	* codgen.c: emit code for 'Default Error Handler' in nested
	     subroutines when the main module has GLOBAL files

2018-05-24  Ron Norman <rjn@inglenet.com>
	* cobc.c: Remove change to set LANG env var

2018-05-24  Ron Norman <rjn@inglenet.com>
	* tree.c: Limit compile time constant expression resolution
	    to values small than 9 digits. (To avoid a problem on macOS)

2018-05-23  Ron Norman <rjn@inglenet.com>
	* codegen.c: For report records, initialize to SPACEs and
	    when setting to a literal, skip clear of trailing spaces

2018-05-21  Ron Norman <rjn@inglenet.com>
	* cobc.c: If LANG is undefined in environment, then set it to "C"

2018-05-15  Ron Norman <rjn@inglenet.com>
	* field.c: When -fibmcomp is used, COMP-5 as well as COMP-4/BINARY
	         should have the size computed as binary-size = 2-4-8

2018-03-25  Ron Norman <rjn@inglenet.com>
	* tree.c: Removed warn_cannot_get_utc

2018-03-11  Ron Norman <rjn@inglenet.com>
	* typeck.c: Adjust UTC Offset for Daylight Savings Time

2018-03-10  Ron Norman <rjn@inglenet.com>
	* codegen.c,tree.h: Make chk_field_variable_size available
	* typeck.c: If destination of a MOVE is variable_size then
	   emit code as if  dest (1:)  had been coded so entire
	   field is copied. To avoid ODO limiting length of MOVE.

2018-03-10  Ron Norman <rjn@inglenet.com>
	* codegen.c: Fix for INITIALIZE of signed numeric use 'cob_move'

2018-03-08  Ron Norman <rjn@inglenet.com>
	* codegen.c: For INITIALIZE of signed numeric use 'cob_move'

2018-03-05  Ron Norman <rjn@inglenet.com>